--- a/openvidu-call-back/package.json
+++ b/openvidu-call-back/package.json
@@ -4,11 +4,13 @@
     "url": "https://github.com/OpenVidu/openvidu-call/issues"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "chalk": "4.1.2",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "form-data": "^4.0.0",
     "http-proxy-middleware": "2.0.6",
     "openvidu-node-client": "2.29.0"
   },
