feat: 添加webcomponent-app

--- a/docker/Dockerfile.node
+++ b/docker/Dockerfile.node
@@ -24,6 +24,8 @@ COPY --from=openvidu-call-build /openvidu-call/openvidu-call-back .
 
 COPY --from=openvidu-call-build /openvidu-call/demo ./dist/public/demo
 
+COPY --from=openvidu-call-build /openvidu-call/webcomponent-app ./dist/public/webcomponent-app
+
 RUN npm install --location=global npm
 
 # Install backend dependencies and build it for production
