--- a/docker/Dockerfile.node
+++ b/docker/Dockerfile.node
@@ -32,6 +32,12 @@ RUN npm install --location=global npm
 RUN npm install && \
     npm run build
 
+ENV TZ Asia/Shanghai
+
+RUN apk add tzdata && cp /usr/share/zoneinfo/${TZ} /etc/localtime \
+    && echo ${TZ} > /etc/timezone \
+    && apk del tzdata
+
 # Entrypoint
 COPY docker/node-entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN apk add curl && \
